--- a/technical-homework-4/Main.Master
+++ b/technical-homework-4/Main.Master
@@ -5,14 +5,46 @@
 <html>
 <head runat="server">
     <title></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
         <div>
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Pet Electronic Prescriptions</a>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#Veterinarian.aspx">Veterinarian</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Cusotmer Service</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Dispensing Department</a>
+                            </li>
+                        </ul>
+                        <button class="btn btn-light">
+                            Sign Out
+                        </button>
+                    </div>
+                </div>
+            </nav>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 mx-3 border-top">
+                <h5>Pet Electronic Prescriptions</h5>
+                <ul class="nav col-md-4">
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQ</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
+                </ul>
+                <p class="col-md-4 mb-0 text-muted justify-content-end">&copy; Pet Electronic Prescriptions, Inc 2022. We love our users!</p>
+            </footer>
         </div>
     </form>
 </body>
